--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<!-- Barra izquierda -->
 			<header id="header">
 				<!-- Tu imagen -->
-				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/jessicayellow/jessicayellow.github.io/master/images/jessicayellow.png" alt="" /></a>
+				<a href="#" class="image avatar"><img src="https://raw.githubusercontent.com/yolandamartinez/yolandamartinez.github.io/master/images/16716103_1226518797418042_1746073852666257433_o.jpg" alt="" /></a>
 				<!-- Tu perfil -->
-				<h1><strong>Escribe tu nombre</strong>, tu perfil.<br />
+				<h1><strong>yolandamartinez</strong>, tecnico en sistemas.<br />
 			</header>
 
 		<!-- Contenido principal -->
@@ -23,10 +23,10 @@
 					<section id="one">
 						<header class="major">
 							<!-- Tu perfil - Título -->
-							<h2>Tu perfil - Título.</h2>
+							<h2>yolanda martinez -tecnico en sistemas.</h2>
 						</header>
 						<!-- Tu perfil - Descripción -->
-						<p>A lo largo de mi carrera profesional, siempre me he destacado por crear, compartir y ejecutar campañas de marketing online, principalmente en diferentes corporativos.</p>
+						<p>con el tecnico en sistemas, siempre he querido aprender y tener buenos conocimientos,  compartir y ejecutar los progranmas de y cursos que destacan, principalmente en diferentes areas.</p>
 						<ul class="actions">
 							<li><a href="https://co.linkedin.com/in/jessica-yellow-64b053123" target="_blank" class="button">Conoce más de mi trabajo.</a></li>
 						</ul>
